objects/PRH_Brand_Criteria__c.object
<CustomObject>
    <description>Brand Criteria</description>
    <fields>
        <fullName>PRH_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>PRH_Brand_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PRH_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>PRH_Luxury_Accounts__c</referenceTo>
        <relationshipName>PRH_Brand_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PRH_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>PRH_Brand_Luxury_Brand__c</referenceTo>
        <relationshipName>PRH_Brand_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PRH_Branded_Event_Number__c</fullName>
        <label>Branded Event Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRH_Branded_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRH_Collect__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Collect</label>
        <referenceTo>PRH_Collect__c</referenceTo>
        <relationshipLabel>Le Cercle Brands</relationshipLabel>
        <relationshipName>Le_Cercle_Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PRH_EU_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account (EU)</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipName>PRH_EU_Brand_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PRH_Number_of_Branded_Events__c</fullName>
        <label>FYTD N° Activations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRH_Presence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Presence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRH_Visibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRH_Volume__c</fullName>
        <label>FYTD Vol (L/year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Le Cercle Brands</label>
    <listViews>
        <fullName>EUR_PT_View</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>PRH_Account__c</columns>
        <columns>PRH_EU_Account_Name__c</columns>
        <columns>PRH_Account_Name__c</columns>
        <columns>PRH_Branded_Event__c</columns>
        <columns>PRH_Brand__c</columns>
        <columns>PRH_Branded_Event_Number__c</columns>
        <columns>PRH_Collect__c</columns>
        <columns>PRH_Number_of_Branded_Events__c</columns>
        <columns>PRH_Volume__c</columns>
        <columns>PRH_Presence__c</columns>
        <columns>PRH_Visibility__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PRH_Brand_Criteria__c.PRH_Luxury_Account_Pernod,PRH_Brand_Criteria__c.PRH_Luxury_Account_Ricard</value>
        </filters>
        <label>EUR PT View</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BCN-{000000000}</displayFormat>
        <label>Brand Criteria Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Le Cercle Brands</pluralLabel>
    <recordTypes>
        <fullName>PRH_Luxury_Account_Pernod</fullName>
        <active>true</active>
        <description>PRH - Luxury Account for Iconic Platform Pernod Brands</description>
        <label>Luxury Account - Pernod</label>
    </recordTypes>
    <recordTypes>
        <fullName>PRH_Luxury_Account_Ricard</fullName>
        <active>true</active>
        <description>PRH - Luxury Account for Iconic Platform Ricard Brands</description>
        <label>Luxury Account - Ricard</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>PRH_Presence_Checked</fullName>
        <active>true</active>
        <description>To check if the brand is present</description>
        <errorConditionFormula>IF( AND( PRH_Presence__c = FALSE ,  OR( 
PRH_Branded_Event__c  = TRUE ,  
PRH_Visibility__c = TRUE )), TRUE , FALSE)</errorConditionFormula>
        <errorMessage>Presence must be checked if other values are true.</errorMessage>
    </validationRules>
</CustomObject>